Prevent mobile-render from overflowing

--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -140,6 +140,7 @@
       position: relative;
       bottom: 4.6875rem;
       pointer-events: none;
+      overflow: hidden;
 
       img {
         @media (max-width: @md) {
